[package]
name = "bsky-slack-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
bsky-thread-lib = { path = "../bsky-thread-lib" }
lambda_runtime = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
