[package]
name = "bsky-thread"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsky-thread"
path = "src/main.rs"

[dependencies]
bsky-thread-lib = { path = "../bsky-thread-lib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
