[package]
name = "bsky-video-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsky-video-dl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
urlencoding = "2"
indicatif = "0.17"
