[package]
name = "bsky-video-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsky-video-dl"
path = "src/main.rs"

[dependencies]
bsky-video-lib = { path = "../bsky-video-lib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
