[package]
name = "bsky-video-lib"
version = "0.1.0"
edition = "2021"
description = "Library for downloading videos from Bluesky posts"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
urlencoding = "2"
ts-to-mp4 = { git = "https://github.com/rajbot/ts-to-mp4" }
